made catalog transitions

--- a/src/index.html
+++ b/src/index.html
@@ -48,14 +48,17 @@
         </ul>
       </nav>
     </header>
+
     <main class="main">
       <div class="main__content container">
         <div class="card" data-qa="card">
-          <img
+          <div class="card__box-image">
+            <img
             src="/images/imac.jpeg"
             alt="image of product"
             class="card__image"
           >
+          </div>
           <h3 class="card__description">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</h3>
           <p class="card__item-code">Код товара: 195434</p>
           <div class="card__rating">
@@ -80,12 +83,15 @@
             Купить
           </a>
         </div>
+
         <div class="card">
-          <img
+          <div class="card__box-image">
+            <img
             src="/images/imac.jpeg"
             alt="image of product"
             class="card__image"
           >
+          </div>
           <h3 class="card__description">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</h3>
           <p class="card__item-code">Код товара: 195434</p>
           <div class="card__rating">
@@ -109,12 +115,15 @@
             Купить
           </a>
         </div>
+
         <div class="card">
-          <img
+          <div class="card__box-image">
+            <img
             src="/images/imac.jpeg"
             alt="image of product"
             class="card__image"
           >
+          </div>
           <h3 class="card__description">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</h3>
           <p class="card__item-code">Код товара: 195434</p>
           <div class="card__rating">
@@ -138,12 +147,15 @@
             Купить
           </a>
         </div>
+
         <div class="card">
-          <img
+          <div class="card__box-image">
+            <img
             src="/images/imac.jpeg"
             alt="image of product"
             class="card__image"
           >
+          </div>
           <h3 class="card__description">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</h3>
           <p class="card__item-code">Код товара: 195434</p>
           <div class="card__rating">
@@ -167,12 +179,15 @@
             Купить
           </a>
         </div>
+
         <div class="card">
-          <img
+          <div class="card__box-image">
+            <img
             src="/images/imac.jpeg"
             alt="image of product"
             class="card__image"
           >
+          </div>
           <h3 class="card__description">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</h3>
           <p class="card__item-code">Код товара: 195434</p>
           <div class="card__rating">
@@ -196,12 +211,15 @@
             Купить
           </a>
         </div>
+
         <div class="card">
-          <img
+          <div class="card__box-image">
+            <img
             src="/images/imac.jpeg"
             alt="image of product"
             class="card__image"
           >
+          </div>
           <h3 class="card__description">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</h3>
           <p class="card__item-code">Код товара: 195434</p>
           <div class="card__rating">
@@ -225,12 +243,15 @@
             Купить
           </a>
         </div>
+
         <div class="card">
-          <img
+          <div class="card__box-image">
+            <img
             src="/images/imac.jpeg"
             alt="image of product"
             class="card__image"
           >
+          </div>
           <h3 class="card__description">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</h3>
           <p class="card__item-code">Код товара: 195434</p>
           <div class="card__rating">
@@ -254,12 +275,15 @@
             Купить
           </a>
         </div>
+
         <div class="card">
-          <img
+          <div class="card__box-image">
+            <img
             src="/images/imac.jpeg"
             alt="image of product"
             class="card__image"
           >
+          </div>
           <h3 class="card__description">Моноблок APPLE A1419 iMac 27" Retina 5K (MNED2UA/A)</h3>
           <p class="card__item-code">Код товара: 195434</p>
           <div class="card__rating">
